# hooksample

./: .dir-locals.el  .gitignore  .travis.yml  CodeChat.css  MANIFEST.in  Makefile  README.rst  conf.py  docs-requirements.txt  index.rst  readthedocs.yml  setup.cfg
src/pyi_hooksample/: __init__.py  _hidden.py
src/pyi_hooksample/__pyinstaller/: __init__.py  hook-pyi_hooksample.py  test_hooksample_packaging.py
src/pyi_hooksample/__pyinstaller/pre_find_module_path/: hook-pyi_hooksample.py
src/pyi_hooksample/__pyinstaller/pre_safe_import_module/: hook-pyi_hooksample.py
src/pyi_hooksample/__pyinstaller/rthooks/: __init__.py  pyi_rth_hooksample.py
tests/: test_basic.py
